workaround for dropdown-cell overlap bug (no more scrollbars for table)

--- a/web_app/assets/styles.css
+++ b/web_app/assets/styles.css
@@ -97,8 +97,8 @@ code {
 .content {
     padding-top: 1rem;
     padding-bottom: 2rem;
-    padding-left: 7rem;
-    padding-right: 7rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     background-color: whitesmoke;
     min-height: 100rem;
 }
